# ztwim-test-framework

./: .cursorrules  .gitignore  README.md  conftest.py  pyproject.toml  requirements-ai.txt  requirements.txt
assets/: pytest-html-style.css
ci/: conflux-pipeline.yaml
config/: env.example  settings.yaml
docs/: PROPOSAL.md  PYTEST_FLOW.md
fixtures/crds/: operator-install.yaml  ztwim-stack.yaml
fixtures/crds/cert-manager/: certificate-federation.yaml  issuer-letsencrypt.yaml  operatorgroup.yaml  router-secret-role.yaml  router-secret-rolebinding.yaml  subscription.yaml
fixtures/crds/sqlite/: spire-server-sqlite.yaml
fixtures/crds/ztwim/: operands-base.yaml  operator-install.yaml
plugins/ztwim-test/: README.md
plugins/ztwim-test/.claude-plugin/: plugin.json
plugins/ztwim-test/commands/: coverage-gap.md  generate-from-jira.md  generate-from-pr.md  suggest.md  validate.md
plugins/ztwim-test/scripts/: generate_from_pr.py  validate_tests.py  ztwim_test_generator.py
scripts/: auto_gen.py  ci_run_tests.sh  install_ztwim.py
src/: __init__.py
src/helpers/: ossm.py  ossm_federation.py
src/ocp_client/: __init__.py  client.py  spire_crds.py
src/utils/: __init__.py  config.py  logger.py  polling.py  test_reporting.py  ztwim_setup.py
tests/: __init__.py
tests/csi_driver/: __init__.py  test_csi_driver_deployment.py  test_pr72_csi_config.py
tests/federation/: __init__.py  conftest.py  test_https_spiffe_federation.py  test_hybrid_acme_certmanager_federation.py  test_ossm_spire_cross_cluster_federation.py
tests/oidc_discovery/: __init__.py  test_oidc_discovery_deployment.py  test_pr72_oidc_config.py
tests/operator/: __init__.py  test_operator_installation.py  test_pr72_ztwim_config.py
tests/ossm/: conftest.py  test_ossm_spire_integration.py
tests/spire_agent/: __init__.py  test_pr72_agent_config.py  test_spire_agent_deployment.py
tests/spire_server/: __init__.py  test_pr72_server_config.py  test_spire_server_deployment.py
tests/workload_identity/: __init__.py
