[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ztwim-test-framework"
version = "0.1.0"
description = "AI-Powered Test Framework for ZTWIM Operator & SPIFFE/SPIRE on OpenShift"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Sayak Das", email = "sayadas@redhat.com" }
]
keywords = ["ztwim", "spiffe", "spire", "openshift", "kubernetes", "testing", "pytest"]

dependencies = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-html>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-order>=1.2.0",
    
    # Better Reporting
    "pytest-sugar>=1.0.0",
    
    # Kubernetes/OpenShift
    "kubernetes>=28.1.0",
    "openshift-client>=1.0.0",
    
    # HTTP & Async
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    
    # Data & Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    
    # CLI & Output
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "openai>=1.12.0",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
ztwim-test = "src.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests/federation"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-s",
    "--tb=short",
    "-ra",
    "--self-contained-html",
    "--css=assets/pytest-html-style.css",
]
markers = [
    "federation: Tests for cluster federation",
    "acme_certmanager: Hybrid federation with cert-manager ACME and https_web",
    "slow: Marks tests as slow running",
    "destructive: Tests that modify cluster state significantly",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Live logging configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(asctime)s] %(levelname)-8s %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# File logging (optional)
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_file_format = "[%(asctime)s] %(levelname)-8s %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

